--- a/.github/workflows/Lab_9_revision.yml
+++ b/.github/workflows/Lab_9_revision.yml
@@ -4,8 +4,8 @@ on:
   workflow_dispatch:
 
 env:
-  RESOURCE_GROUP: RG_Lab_9
-  ACR_NAME: acrlab9
+  RESOURCE_GROUP: PBA-RG_Lab_9
+  ACR_NAME: pbacrlab9
   APPLICATION: hello-aca
   REV_APPLICATION: rev-02
   VERSION_2_APPLICATION: 2.0.0
